subset for kuhar added in yontem1

--- a/KU-HAR_YONTEM1.ipynb
+++ b/KU-HAR_YONTEM1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "5f3db352",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,8 @@
     "\n",
     "os.makedirs(\"models\", exist_ok=True)\n",
     "data = pd.read_csv('dataset/KU-HAR/3.Time_domain_subsamples/KU-HAR_time_domain_subsamples_20750x300.csv', header=None)\n",
+    "#AŞAĞIDAKİ YORUM SATIRINI AÇIP ÜSTTEKİNİ YORUMA ALIRSANIZ YENİDEN TRİN TEST ETMEK GEREKİR. ÜSTTEKİ BÜTÜN VERİ SETİ. ALTTAKI SUBSET\n",
+    "#data = pd.read_csv('dataset/KU-HAR/3.Time_domain_subsamples/KU-HAR_time_domain_subsamples_subset.csv', header=None)\n",
     "activity_labels = [\n",
     "    'Stand',\n",
     "    'Sit',\n",
